--- a/airbnb/src/style.css
+++ b/airbnb/src/style.css
@@ -9,6 +9,20 @@ body {
 nav {
     height: 70px;
     display: flex;
-    background-color: blue;
-    padding: 20px 36px
+    padding: 20px 36px;
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+
+.nav--logo {
+    max-width: 120px;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+}
+
+.hero--photo {
+    max-width: 400px;
+    align-self: center;
 }
