--- a/airbnb/src/style.css
+++ b/airbnb/src/style.css
@@ -13,6 +13,14 @@ nav {
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
+.bold {
+    font-weight: bold;
+}
+
+.gray {
+    color: #918E9B;
+}
+
 .nav--logo {
     max-width: 120px;
 }
@@ -25,4 +33,23 @@ nav {
 .hero--photo {
     max-width: 400px;
     align-self: center;
+}
+
+.card {
+    width: 175px;
+    font-size: 12px;
+}
+
+.card--image {
+    width: 100%;
+    border-radius: 9px;
+}
+
+.card--stats {
+    display: flex;
+    align-items: cent
+}
+
+.card--star {
+    height: 14px;
 }
